--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/equiz
 spring.datasource.username=root
 spring.datasource.password=00000000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.initialization-mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+
 
